--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,12 @@
     overflow: hidden;
 }
 
+html {
+    height: 100%;
+}
+
 body {
+    min-height: 100%;
     font-family: 'Outfit', sans-serif;
     color: var(--white);
     font-size: 12px;
@@ -25,7 +30,7 @@ body {
 
 .main {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
