--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow: hidden;
 }
 
 html {
@@ -34,8 +33,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     background-color: var(--very-dark-blue);
+    padding: 50px 0;
 }
 
 .container {
