--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ body {
     font-family: 'Outfit', sans-serif;
     color: var(--white);
     font-size: 12px;
+    overflow-x: hidden;
 }
 
 .main {
